add team members to config

--- a/_config.yaml
+++ b/_config.yaml
@@ -4,3 +4,10 @@ prose:
   media: 'media'
   metadata:
     _posts:
+
+
+team:
+	- name: Mila Frerichs
+      position: OF
+    - name: Björn Helfer
+      position: SS, 3B, OF
